--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.serverless</groupId>
-  <artifactId>hello</artifactId>
+  <artifactId>java8</artifactId>
   <packaging>jar</packaging>
   <version>dev</version>
-  <name>hello</name>
+  <name>java8</name>
 
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -16,18 +16,8 @@
   <dependencies>
     <dependency>
       <groupId>com.amazonaws</groupId>
-      <artifactId>aws-lambda-java-log4j2</artifactId>
-      <version>1.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.8.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.8.2</version>
+      <artifactId>aws-lambda-java-core</artifactId>
+      <version>1.2.0</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
