--- a/java11/serverless.yml
+++ b/java11/serverless.yml
@@ -26,5 +26,5 @@ functions:
 custom:
   customDomain:
     domainName: api.mycodefu.com
-    basePath: 'java-language-test/java11'
+    basePath: 'language-test-java11'
     stage: ${self:provider.stage}
