combine the serverless deployment into one

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,10 +66,11 @@ jobs:
           root: ~/repo
           paths:
             - java11/target/java11-dev.jar
-            - java11/serverless.yml
+            - package.json
+            - package-lock.json
+            - serverless.yml
 
-
-  deploy-java11:
+  deploy:
     docker:
     - image: circleci/node:12
 
@@ -81,48 +82,16 @@ jobs:
 
       - restore_cache:
           keys:
-            - v1-dependencies-node-serverless-1-61-2-serverless-domain-manager-3-3-1
+            - v1-dependencies-{{ checksum "package-lock.json" }}
 
-      - run: npm install serverless@1.61.2 serverless-domain-manager@3.3.1
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-node-serverless-1-61-2-serverless-domain-manager-3-3-1
-
-      - run:
-          name: Deploy to AWS
-          command: |
-            cd java11
-            ../node_modules/serverless/bin/serverless deploy
-
-
-  deploy-java8:
-    docker:
-    - image: circleci/node:12
-
-    working_directory: ~/repo
-
-    steps:
-      - attach_workspace:
-          at: ~/repo
-
-      - restore_cache:
-          keys:
-            - v1-dependencies-node-serverless-1-61-2-serverless-domain-manager-3-3-1
-
-      - run: npm install serverless@1.61.2 serverless-domain-manager@3.3.1
+      - run: npm install
 
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-node-serverless-1-61-2-serverless-domain-manager-3-3-1
+          key: v1-dependencies-{{ checksum "package-lock.json" }}
 
-      - run:
-          name: Deploy to AWS
-          command: |
-            cd java8
-            ../node_modules/serverless/bin/serverless deploy
+      - run: npm run deploy
 
 workflows:
   version: 2
@@ -130,9 +99,7 @@ workflows:
     jobs:
       - build-java8
       - build-java11
-      - deploy-java8:
+      - deploy:
           requires:
             - build-java8
-      - deploy-java11:
-          requires:
             - build-java11
