always hot + dynamo dependency

--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,7 @@ functions:
           method: get
   java11:
     runtime: java11
+    provisionedConcurrency: 20
     package:
       artifact: java11/target/java11-dev.jar
     handler: com.mycodefu.Handler
