--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,8 @@ functions:
           method: get
   java11:
     runtime: java11
-    provisionedConcurrency: 20
+    provisionedConcurrency: 50
+    memorySize: 3008
     package:
       artifact: java11/target/java11-dev.jar
     handler: com.mycodefu.Handler
