--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,7 @@ plugins:
 functions:
   nodejs:
     runtime: nodejs12.x
-    handler: node12/handler
+    handler: node12/handler.handler
     package:
       exclude:
         - '*/**'
