--- a/java8/pom.xml
+++ b/java8/pom.xml
@@ -11,6 +11,9 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.projectKey>SydneyJavaMeetup_aws-lambda-java11</sonar.projectKey>
+    <sonar.organization>sydneyjavameetup</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
